--- a/.github/workflows/Collector.yml
+++ b/.github/workflows/Collector.yml
@@ -12,7 +12,7 @@ on:
   schedule:
     # - cron: '*/5 * * * *'
     # 表达式生成  https://crontab.guru/
-    - cron: "0 0 * * *"
+    - cron: "0 6/12 * * *"
 
 jobs:
   main:
